fixed spacing on waybar

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -29,7 +29,7 @@ tooltip label {
 }
 
 #workspaces button {
-    padding: 0 0.75em;
+    padding: 0 1em;
     background: transparent;
     color: #A7A9AC;
 }
